# EDF

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/: main_app.py
src/backend/: config.py
src/backend/api/: ingestion.py
src/backend/database/: manager.py
src/backend/pydantic_models/: ingestion.py
src/backend/services/ingestion/: service.py
tests/: conftest.py  helpers.py  test_api_ingestion.py  test_ingestion.py
