[project]
name = "edf"
version = "0.1.0"
description = "Electricity Demand Forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "darts>=0.39.0",
    "diskcache>=5.6.3",
    "duckdb>=1.4.3",
    "fastapi>=0.124.4",
    "nicegui>=3.4.0",
    "openmeteo-requests>=1.7.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests-cache>=1.2.1",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
